src/Components/Character/Character.module.scss
@import "../../Styles/theme.scss";

.container {
  width: 50%;
  max-width: 170px;
  position: relative;
  display: flex;
  align-items: flex-end;
  background-color: $color-black;
  margin: 10px 10px 10px 10px;
  @include for-mobile {
    width: 40%;
  }
  &:after {
    width: 0;
    height: 0;
    bottom: 0;
    right: 154px;
    content: "";
    position: absolute;
    border-style: solid;
    border-width: 16px 16px 0 0;
    border-color: red $color-white $color-white $color-white;
    @include for-mobile {
      right: 120px;
    }
  }

  @include for-tablet {
    width: 30%;
  }
}

.cover {
  color: $color-white;
  background-image: linear-gradient(to top , red, yellow);
  position: absolute;
  top: 0;
  left: 0;
  padding-bottom: 5px;
  width: 100%;
  height: 210px;
  z-index: 10;
  overflow: hidden;
  display: flex;
}

.summary {
  display: none;
  height: 100%;
  @include upper();

  li {
    list-style: none;
  }
}

.thumb {
  width: 100%;
  height: 210px;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 20;
  background-color: $color-black;
  transition: opacity 0.3s linear;
}

.details {
  margin-top: 215px;
  padding: 20px;
  @include upper();
}

.title {
  font: $font-title;
  color: $color-white;
  transition: font-size 0.3s linear;
}

.descr {
  color: $color-grey;
}

.container:hover {
  .summary {
    display: block;
  }

  .thumb {
    opacity: 0;
  }

  .title {
    font-size: 17px;
  }
}

